--- a/templates/link.jade
+++ b/templates/link.jade
@@ -1,5 +1,4 @@
-link(rel="sitemap",href="https://undoware.ca/sitemap.xml")
+link(rel="sitemap",href="https://demo.undoware.ca/sitemap.xml")
 link(rel="author",href='https://undoware.ca/who/')
 link(rel="profile",href='http://microformats.org/profile/hcard')
-link(rel='stylesheet',href='https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,700italic|Source+Sans+Pro:300,300italic,700,7700italic',charset='utf-8')
 
