--- a/templates/site.jade
+++ b/templates/site.jade
@@ -3,20 +3,14 @@
 
 block append header
   include ie.html
-  //command zee-bra, get it? Just some decoration
-  div#zebra
   div.column-group
     div.logo-block.push-left.large-25.small-25
       div.chop
-        //todo figure out why angular logo module falls down here
         a(href='/')
           img(src=svg('logo'),alt="logo")
       div.logotype
         h1
-          span.logo#logo UND↺WARE
-        em.slogan
-          a(href='/what/')=locals.description
-
+          span.logo#logo locals.title
     nav
       ul
         each location in locals.sitemap
