got to 0 point. development begins in earnest.

--- a/contents/style/local.styl
+++ b/contents/style/local.styl
@@ -1,14 +1,15 @@
 
 
 
-local-accent-color = #D0D0D0
-local-highlight-color = #F0F0F0
-local-background-color = #130005
-local-action-color = #205590
-local-corner-radius = 10px
+local-accent-color =  #066b4d
+local-highlight-color = #06a978
+local-gutter-color = #706e6f
+local-background-color = #d7d7d7
+local-action-color = #06a978
+local-corner-radius = 0px
 
 local-headline-font()
-  font-family: 'Raleway', Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', 'Open Sans', Helvetica, serif;
   font-size: 36pt;
   font-weight: 400;
   color: local-action-color
