--- a/contents/style/mobile.styl
+++ b/contents/style/mobile.styl
@@ -1,64 +1,4 @@
 /* MIT License, (c) 2013 Elizabeth Marston */
 
-/* General fine-tweakings, with one notable exception:
-   The nav is moved to the
-   bottom of the screen and fixed to the window frame
-   (and is made blue)
-*/
-
 @media screen and (max-width: 900px)
-  #page
-    width: 100%
-    max-width: 100%
-    padding: 1em
-    min-width: 0
-    margin: 0
-    .area
-      max-width: 100%
-    .area.header
-      min-width:0
-      nav
-        position: fixed
-        width: 100%
-        bottom: 0
-        right: 0
-        z-index: 1
-        overflow: hidden
-        text-align: right
-        background-color: local-action-color
-        background-image: svg('logo-black')
-        background-size: 24px 24px
-        background-repeat: no-repeat
-        background-position: 24px center
-        font-size: 11pt
-        a
-          color: local-highlight-color
-          text-shadow: 0 0 0 rgba(0,0,0,0)
-    .area.main
-      position: inherit
-      min-width: 0
-      padding: 1em
-    .area.topbar li
-      padding-left: 0
-      padding-right: 1em
-  footer.area
-    display: block
-    width: 100%
-    margin: 0
-    padding:0
-    text-align center
-  body.who
-    background-image: url(https://undoware-cdn.appspot.com/raster/shattered.png) !important
-  menu.nav
-    display block
-    position: fixed
-    min-width: 25%
-    bottom: -4.25em
-    padding-top: 10px
-    color: #FFF
-    z-index 5
-    left: 1em
-    padding: 0
-    text-indent none
-    a
-      margin-right: 1em
+  /* TODO */
