--- a/templates/page.jade
+++ b/templates/page.jade
@@ -1,3 +1,13 @@
 
+
+block append content
+  div.all-25
+    div.hotlinks
+      include sidebar-hotlinks
+    div.signup
+       include sidebar-signup
+  div.all-75
+    | !{page.html}
+
 extends site
 
