--- a/templates/footer-newsletter.jade
+++ b/templates/footer-newsletter.jade
@@ -4,13 +4,13 @@ form.ink-form.column-group
   div.control-group.all-100
     div.control.prepend-symbol
       span
-        input#signup(type="text",placeholder="Enter your email address...")
-        i.fa.fa-envelope-o(style='color:grey;font-size:0.9em') &nbsp;
+        input#signup(type="text",placeholder="   Enter your email address...")
+        i.fa.fa-envelope(style='color:grey;font-size:0.9em') &nbsp; 
     div.control.push-left.inline
       input.push-left#agree(type='checkbox')
     label.push-right(for='agree') 
       | I agree to the 
       a(href='privacy.html') Privacy Notice.
   div.control.column-group.all-100
-      div.all-30 &nbsp;
-      input.push-right.all-70(type="submit",value="Sign Up")
+      div.all-50 &nbsp;
+      input.push-right.all-50(type="submit",value="Sign Up    >")
