--- a/templates/sidebar-signup.jade
+++ b/templates/sidebar-signup.jade
@@ -7,12 +7,17 @@ form.ink-form.column-group
     input.all-100#company(type="text",placeholder="Company Name")
     input.all-100#position(type="text",placeholder="Position")
   div.column-group.control-group.all-100
-    div.control.all-50
+    div.control.all-50.small-100
       input.all-100#email(type="email",placeholder="Email")
-    div.control.all-50
+    div.control.all-50.small-100
       input.all-100#phone(type="text",placeholder="Phone")
-  div.control.all-100
+  div.column-group.control-group.all-100
+    div.control.all-50.small-100
+      input.all-100#city(type="text",placeholder="City")
+    div.control.all-50.small-100
+      input.all-100#province(type="text",placeholder="Province")
+  div.control.all-100.small-100
     input.all-100#display(type="text",placeholder="Display Name")
-  div.control.column-group.all-100
+  div.control.column-group.all-100.small-100
       div.all-50 &nbsp;
-      input.push-right.all-50(type="submit",value="SUBMIT")
+      input.push-right.all-50(type="submit",value="SUBMIT   >")
