fixed drop shadow

--- a/contents/style/screen.styl
+++ b/contents/style/screen.styl
@@ -1,6 +1,11 @@
 /* MIT License, (c) 2013 Elizabeth Marston */
 
 
+main
+.main
+#copyright
+  box-shadow 2px 2px 5px #101010
+
 
 body
   background-color local-gutter-color
@@ -43,7 +48,6 @@ nav
 
 main
   background-color local-background-color
-  box-shadow 2px 2px 2px #101010
 
 footer.main
   background-color local-accent-color
