--- a/contents/style/local.styl
+++ b/contents/style/local.styl
@@ -14,7 +14,7 @@ local-headline-font()
 
 
 local-font()
-  font-family: 'Source Sans Pro', 'Open Sans', Helvetica, serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: local-accent-color
   font-size: 16pt
   font-weight: 300
